refactor(#010): Redis Streams 메시지 처리 아키텍처 최적화 및 사용자 정보 전파 개선
Redis 연결 관리 및 메시지 처리 파이프라인을 전면 재설계하여 안정성과 성능을 향상시켰습니다.

## 변경 사항

### 1. Redis 연결 풀 및 설정 최적화
- **Lettuce Connection Factory 완전 재구성**
  - ClientOptions: autoReconnect, pingBeforeActivate 활성화
  - ClientResources: IO/Computation 스레드 풀 명시적 설정 (각 4개)
  - Connection Pool: commons-pool2 의존성 추가 및 서버별 최적화
    - API Server: max-active 3, max-idle 2 (세션/캐시 전용)
    - Chat Server: max-active 20, max-idle 10 (Streams 처리)
  - Timeout: command 60s, shutdown 100s, connect 5s
  - shareNativeConnection=false, validateConnection=true (Streams 안정성)

### 2. Redis Streams Consumer 아키텍처 개선
- **Lazy Start Pattern 도입**
  - Container는 생성만 하고 시작하지 않음
  - ConsumerRegistrationService가 첫 Listener 등록 시 start() 호출
  - Listener 없는 Container의 불필요한 폴링 방지
  - ConnectionFactory 검증 로직 추가 (@PostConstruct)

### 3. 메시지 데이터 구조 표준화 (ObjectRecord → MapRecord)
- **Redis native hash 구조로 통일**
  - ObjectRecord의 복잡한 타입 캐스팅 제거
  - MapRecord.getValue()가 직접 Map<String, Object> 반환
  - 모든 Consumer 인터페이스 시그니처 변경
  - 타입 안정성 및 가독성 향상

### 4. 사용자 정보 전파 메커니즘 구축
- **WebSocket → Coordinator → Enricher 전체 파이프라인 개선**
  - ChatMessageController: 세션에서 userId, nickname, avatarUrl 추출
  - MessageCoordinatorService: 오버로드 메소드 추가 (세션 정보 포함)
  - MessageEnricher: enrichWithUserInfo() 신규 메소드 (사용자 정보 포함)
  - EnrichedMessage: nickname, avatarUrl 필드 추가
  - Redis Streams 메시지에 사용자 정보 자동 포함

### 5. Consumer 처리 로직 강화
- **AbstractMessageConsumer**
  - extractMessageType(): MapRecord 직접 접근으로 간소화
  - 로깅 레벨 조정 (debug → info) 및 구조화된 로그 메시지
- **RoomBroadcastConsumer**
  - Redis 메시지에서 nickname, avatarUrl 직접 추출
  - UserSummaryDto 빌더 패턴 적용
- **MessageStorageConsumer**
  - @Transactional 추가로 데이터 일관성 보장
  - MongoDB 저장 시 사용자 정보 포함

### 6. 오류 처리 및 안정성 개선
- RedisStreamsConfig: errorHandler에 연결 복구 로직 추가
- ConsumerRegistrationService: Container 시작 실패 시 예외 처리
- StreamMessageRouter: 메시지 타입 누락 시 경고 로그

## 기술적 세부사항

**주요 변경 파일:**
- Config: `RedisConfig.java`, `RedisStreamsConsumerConfig.java`
- Consumer: `A